# DistributedComputingSystem

./: .gitignore  CMakeLists.txt  Concept.txt  main.cpp
Config/: Config.cpp  Config.h  config.cpp  config.h
ConnectionManager/: ConnectionConfig.cpp  ConnectionConfig.h  ConnectionManager.cpp  ConnectionManager.h  ControlMessage.cpp  ControlMessage.h  FileHosting.h  ISendable.h  Socket.h
MatrixProductExample/: CMakeLists.txt  MatrixProduct.cpp  MatrixProduct.h  main.cpp
Network/: ConnectionConfig.h  ConnectionManager.cpp  ControlMessage.cpp  FileHosting.cpp  FileHosting.h  ISendable.h  Socket.cpp
SplitComputeMerge/: Distributable.h  FileHosting.cpp  FileHosting.h
SplitComputeMerge/Master/: Master.cpp  Master.h  MasterConfig.cpp  MasterConfig.h
SplitComputeMerge/Worker/: Worker.cpp  Worker.h  WorkerConfig.cpp  WorkerConfig.h
System/: exec.cpp  exec.h
